# lorekeeper

./: .env.example  .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DESIGN.md  FOLDER_STRUCTURE.md  PROJECT_SETUP.md  README.md  SVG_SETUP.md  package.json  rust-toolchain.toml  turbo.json
apps/mobile/: .env.example  app.config.ts  eas.json  index.js  package.json  tsconfig.json
apps/mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
apps/mobile/app/(auth)/: _layout.tsx  create-profile.tsx  wallet-connect.tsx
apps/mobile/app/(tabs)/: _layout.tsx  characters.tsx  index.tsx  inventory.tsx  profile.tsx
apps/mobile/app/campaign/: [id].tsx  _layout.tsx
apps/mobile/app/character/: [id].tsx  _layout.tsx
apps/mobile/app/session/: [id].tsx  _layout.tsx
apps/mobile/lore/campaigns/: borrowed-face.json  (+4 more)
programs/lorekeeper/: Cargo.toml
programs/lorekeeper/src/: lib.rs
scripts/: seed-env.ts
server/: .env.example  package.json  tsconfig.json
server/scripts/: db-migrate.ts
server/src/: index.ts
server/src/controllers/: campaign.controller.ts  character.controller.ts  lifi.controller.ts  session.controller.ts  tools.controller.ts
server/src/db/: schema.sql
server/src/lib/: constants.ts
server/src/middleware/: auth.middleware.ts  error.middleware.ts  rate-limit.middleware.ts
server/src/routes/: campaign.routes.ts  character.routes.ts  lifi.routes.ts  session.routes.ts  tools.routes.ts
server/src/services/: elevenlabs.service.ts  lifi.service.ts  neonpg.service.ts  solana.service.ts
server/src/types/: api.types.ts
wallets/: README.md
(+33 files in other folders)
